--- a/index.html
+++ b/index.html
@@ -6,21 +6,32 @@
 
 </head>
 <body>
+  
   <header>
-   <style>
-    img{
-      width: 400px;
-      height: 200px;
-    }
-   </style>
-    <figure>
-     
-    </figure>
-
+    <style>
+      img {
+        width: 40px; /* Adjusted width for logo in nav */
+        height: 40px; /* Adjusted height for logo in nav */
+      }
+      nav ul {
+        display: flex;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+      }
+      nav ul li {
+        margin-right: 20px;
+        display: flex;
+        align-items: center;
+      }
+    </style>
     <div class="bx bx-menu" id="menu"></div>
-
+  
     <nav>
       <ul>
+        <li>
+          <img src="logo.png" alt="Warner Bros. Logo">
+        </li>
         <li><a href="index.html">Home</a></li>
         <li><a href="Movies.html">Movies</a></li>
         <li><a href="TV Shows.html">TV Shows</a></li>
@@ -29,7 +40,7 @@
         <li><a href="feedback.html">Feedback</a></li>
       </ul>
     </nav>
-  </header>
+  </header>     
 
   <section class="mySlides fade">
     <img src="scorpionsubzero.jpg">
